@@ -15,8 +15,9 @@ function test()
     dumpSyntaxHighlightCSS("#content > a:hover");
     dumpSyntaxHighlightCSS("@import url(style.css);");
     dumpSyntaxHighlightCSS("@import url(\"style.css\") projection, tv;");
+    dumpSyntaxHighlightCSS("@import \"/css/fireball_unicode.css\"; html {}");
     dumpSyntaxHighlightCSS("@media screen { body { color: red; } }");
-    dumpSyntaxHighlightCSS("@font-face { font-family: MyHelvetica; }");
+    dumpSyntaxHighlightCSS("@font-face { font-family: \"MyHelvetica\"; }");
     dumpSyntaxHighlightCSS("p { color: color; red: red; color: #000; color: #FFF; color: #123AbC; color: #faebfe; color:papayawhip; }");
     dumpSyntaxHighlightCSS("p { margin: -10px !important; }");
 
