@@ -1,4 +1,4 @@
-/* Generated by re2c 0.13.5 on Thu Dec 15 20:24:52 2011 */
+/* Generated by re2c 0.13.5 on Mon Dec 19 17:28:29 2011 */
 /*
  * Copyright (C) 2009 Google Inc. All rights reserved.
  *
@@ -30,16 +30,18 @@
  */
 
 // Generate js file as follows:
-//
-// re2c -isc Source/WebCore/inspector/front-end/SourceCSSTokenizer.re2js \
-// | sed 's|^yy\([^:]*\)*\:|case \1:|' \
-// | sed 's|[*]cursor[+][+]|this._charAt(cursor++)|' \
-// | sed 's|[[*][+][+]cursor|this._charAt(++cursor)|' \
-// | sed 's|[*]cursor|this._charAt(cursor)|' \
-// | sed 's|yych = \*\([^;]*\)|yych = this._charAt\1|' \
-// | sed 's|{ gotoCase = \([^; continue; };]*\)|{ gotoCase = \1; continue; }|' \
-// | sed 's|unsigned\ int|var|' \
-// | sed 's|var\ yych|case 1: case 1: var yych|'
+
+/*
+re2c -isc Source/WebCore/inspector/front-end/SourceCSSTokenizer.re2js \
+ | sed 's|^yy\([^:]*\)*\:|case \1:|' \
+ | sed 's|[*]cursor[+][+]|this._charAt(cursor++)|' \
+ | sed 's|[[*][+][+]cursor|this._charAt(++cursor)|' \
+ | sed 's|[*]cursor|this._charAt(cursor)|' \
+ | sed 's|yych = \*\([^;]*\)|yych = this._charAt\1|' \
+ | sed 's|{ gotoCase = \([^; continue; };]*\)|{ gotoCase = \1; continue; }|' \
+ | sed 's|unsigned\ int|var|' \
+ | sed 's|var\ yych|case 1: case 1: var yych|' > Source/WebCore/inspector/front-end/SourceCSSTokenizer.js
+*/
 
 /**
  * @constructor
@@ -115,7 +117,8 @@ WebInspector.SourceCSSTokenizer = function()
         INITIAL: 0,
         PROPERTY: 1,
         PROPERTY_VALUE: 2,
-        AT_RULE: 3
+        AT_RULE: 3,
+        AT_MEDIA_RULE: 4
     };
 
     this.case_INITIAL = 1000;
@@ -389,15 +392,15 @@ case 32:
             {
                     var token = this._line.substring(cursorOnEnter, cursor);
                     if (this._condition.parseCondition === this._parseConditions.INITIAL) {
-                        if (token === "@import" || token === "@media") {
+                        if (token === "@media") {
+                            this.tokenType = "css-at-rule";
+                            this._condition.parseCondition = this._parseConditions.AT_MEDIA_RULE;
+                        } else if (token.indexOf("@") === 0) {
                             this.tokenType = "css-at-rule";
                             this._condition.parseCondition = this._parseConditions.AT_RULE;
-                        } else if (token.indexOf("@") === 0)
-                            this.tokenType = "css-at-rule";
-                        else
+                        } else
                             this.tokenType = "css-selector";
-                    }
-                    else if (this._condition.parseCondition === this._parseConditions.AT_RULE && token in this._mediaTypes)
+                    } else if ((this._condition.parseCondition === this._parseConditions.AT_MEDIA_RULE || this._condition.parseCondition === this._parseConditions.AT_RULE) && token in this._mediaTypes)
                         this.tokenType = "css-keyword";
                     else if (this._condition.parseCondition === this._parseConditions.PROPERTY && token in this._propertyKeywords)
                         this.tokenType = "css-property";
@@ -646,7 +649,7 @@ case 45:
             ++cursor;
             {
                     this.tokenType = null;
-                    if (this._condition.parseCondition === this._parseConditions.AT_RULE)
+                    if (this._condition.parseCondition === this._parseConditions.AT_MEDIA_RULE)
                         this._condition.parseCondition = this._parseConditions.INITIAL;
                     else
                         this._condition.parseCondition = this._parseConditions.PROPERTY;
